@@ -1,8 +1,6 @@
 DEPTH = ..
 DIRECTORY = gui
 
-INCLUDE += `pkg-config gtkmm-3.0 --cflags`
-
 all : lib
 
 include $(DEPTH)/Makefile.modules
