@@ -1,3 +1,6 @@
+2014-11-24
+	- Fehler beim Beenden des Programms im Spiel korrigiert
+
 2014-11-23
 	- Taktik „zum größten Einflussgebiet“ hinzugefügt
 
